# presence_detection

./: Cargo.toml  README.md
src/: display.rs  main.rs  sensors.rs
