[package]
name = "presence_detection"
version = "0.1.0"
authors = ["max"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rppal = "0.13.1"
ctrlc = "3.1.4"
syslog = "^4.0"
log = "0.4.8"
anyhow = "1.0.36"
thiserror = "1.0.23"
chrono = "0.4.19"
argh = "0.1.4"
